--- a/termofservice.html
+++ b/termofservice.html
@@ -5,12 +5,12 @@
     <body>
         <h1>Terms of Service ("Terms")</h1>
 <p>Last updated: July 02, 2016</p>
-<p>Please read these Terms of Service ("Terms", "Terms of Service") carefully before using the https://cubetechapp3.github.io/ website (the "Service") operated by CubeTech App ("us", "we", or "our").</p>
+<p>Please read these Terms of Service ("Terms", "Terms of Service") carefully before using the https://dolyvn.github.io/ website (the "Service") operated by Doly.vn ("us", "we", or "our").</p>
 <p>Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.</p>
 <p>By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.</p>
 <p><strong>Links To Other Web Sites</strong></p>
-<p>Our Service may contain links to third-party web sites or services that are not owned or controlled by CubeTech App.</p>
-<p>CubeTech App has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that CubeTech App shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.</p>
+<p>Our Service may contain links to third-party web sites or services that are not owned or controlled by Doly.vn.</p>
+<p>Doly.vn has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that Doly.vn shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.</p>
 <p>We strongly advise you to read the terms and conditions and privacy policies of any third-party web sites or services that you visit.</p>
 <p><strong>Termination</strong></p>
 <p>We may terminate or suspend access to our Service immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.</p>
@@ -22,7 +22,7 @@
 <p>We reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a revision is material we will try to provide at least 30 days notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.</p>
 <p>By continuing to access or use our Service after those revisions become effective, you agree to be bound by the revised terms. If you do not agree to the new terms, please stop using the Service.</p>
 <p><strong>Contact Us</strong></p>
-<p>If you have any questions about these Terms, please contact us: cubetechapp3@gmail.com</p>
+<p>If you have any questions about these Terms, please contact us: doly.vn.contact@gmail.com</p>
 
         </body>
         </html>
