--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>CubeTech</title>
-  <meta name="description" content="cubetech">
+  <title>Doly.vn</title>
+  <meta name="description" content="doly.vn">
   <meta name="author" content="suzunghia">
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
