--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><span>CubeTech</span>Admin</a>
+                <a class="navbar-brand" href="#"><span>DOLY.VN</span>Admin</a>
                 <ul class="user-menu">
                     <li class="dropdown pull-right">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="background: 0 0;">
